[package]
name = "bevy_caravan"
version = "0.1.0"
edition.workspace = true

license = "MIT OR Apache-2.0"
description = "A function-like proc macro designed for making expressing Bevy's query.get statements easier."
keywords = ["bevy", "macro"]
repository = "https://github.com/orangutanrider/hubera"
authors = ["Dominic Rooney"]

[lib]
proc-macro = true   

[features]
no_assertions = []